[package]
name = "edge-python-infrastructure"
version = "0.1.0"
edition = "2024"
description = "Infrastructure deployment tool for managing Cloudflare CDN and DNS configurations."
repository = "https://github.com/dylan-sutton-chavez/edge-python_infrastructure/"
license = "MIT OR Apache-2.0"
readme = "README.md"

[lib]
name = "deployment"
path = "src/lib.rs"

[[bin]]
name = "deploy"
path = "src/main.rs"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"

[dependencies]
# Cloudflare SIG V-4 Support.
cloudflare-r2-rs = "0.7"

# HTTP & Async
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Utilities
serde_json = "1"
log = "0.4"
simple_logger = "5.0"

[dev-dependencies]
mockito = "1"
tokio = { version = "1.0", features = ["full"] }