[package]
name = "edge-python-compiler"
version = "0.1.0"
edition = "2024"
description = "Rust compiler weighing less than 100 KB, based on adaptive bytecode interpretation to achieve speeds close to native Rust."
repository = "https://github.com/dylan-sutton-chavez/edge-python/compiler/"
license = "MIT OR Apache-2.0"
readme = "README.md"
autotests = false

[lib]
name = "compiler"
path = "src/lib.rs"

[[bin]]
name = "compiler"
path = "src/main.rs"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"

[dependencies]
logos = "0.16"
thiserror = "2"
log = "0.4"
simple_logger = "5.0"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true