[package]
name = "edge-python"
version = "0.1.0"
edition = "2024"
description = "Rust compiler weighing less than 100 KB, based on adaptive bytecode interpretation to achieve speeds close to native Rust."
repository = "https://github.com/dylan-sutton-chavez/edge-python/compiler/"
license = "MIT OR Apache-2.0"
readme = "README.md"
autotests = false

[lib]
name = "compiler_lib"
path = "src/lib.rs"

[[bin]]
name = "edge"
path = "src/main.rs"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"

[dependencies]
logos = { version = "0.16", default-features = false, features = ["export_derive"] }
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher"] }
log = "0.4"
stderrlog = { version = "0.6", default-features = false }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher", "serde"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true