[package]
name = "edge-python"
version = "0.1.0"
edition = "2024"
description = "Single-pass SSA compiler for Python 3.13: logos lexer, token-to-bytecode parser, adaptive VM with inline caching, template memoization, and configurable sandbox limits."
repository = "https://github.com/dylan-sutton-chavez/edge-python/"
license = "MIT OR Apache-2.0"
readme = "README.md"
autotests = false

[lib]
name = "compiler_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "edge"
path = "src/main.rs"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"

[dependencies]
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher"] }
log = "0.4"
env_logger = "0.11"
lol_alloc = { version = "0.4", optional = true }
itoa = "1"
ryu = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher", "serde"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[features]
wasm = ["lol_alloc"]
wasm-tests = []